tests/dataset/tpc-ds/compiler/kotlin/q31.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q31.kt:46:14: error: type inference failed: Not enough information to infer parameter T in inline fun <T> mutableListOf(): MutableList<T>
Please specify it explicitly.

var result = mutableListOf()
             ^
/tmp/q31.kt:108:63: error: type mismatch: inferred type is Double but Boolean was expected
        if (toDouble(toDouble(web_g1) > toDouble(store_g1) && web_g2) > toDouble(store_g2)) {
                                                              ^
